--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="svg" href="https://iconsvg.co/icon/08dbb3cd-dee9-4c0c-8f21-d79085678a20.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Gestion de alumnos</title>
   </head>
   <body>
     <div id="root"></div>
